--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mujbadar/Watch-Party-Back-End#readme",
   "dependencies": {
+    "aws-sdk": "^2.487.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.6.2",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "socket.io": "^2.2.0"
   }
 }
