--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "lodash": "^4.17.14",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.2",
     "multer": "^1.4.1",
